<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="@android:color/black">
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="761dp"
        android:layout_height="914dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="VisualLintBounds" />
    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_your_phone_number"
        android:backgroundTint="@android:color/white"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/getOtpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_otp"
        app:layout_constraintTop_toBottomOf="@id/phoneInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
